--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,150 @@
-streamlit
-torch
-torchvision
-Pillow
-matplotlib
-fpdf
-gdown
+absl-py==2.3.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.10.0
+arabic-reshaper==3.0.0
+asgiref==3.9.1
+asn1crypto==1.5.1
+astunparse==1.6.3
+attrs==25.3.0
+beautifulsoup4==4.14.2
+bleach==6.2.0
+blinker==1.9.0
+branca==0.8.1
+Brotli==1.1.0
+cachetools==6.2.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.2
+cryptography==45.0.6
+cssselect2==0.8.0
+cycler==0.12.1
+distro==1.9.0
+Django==5.2.5
+djangorestframework==3.16.1
+fastapi==0.116.1
+filelock==3.19.1
+flatbuffers==25.2.10
+folium==0.20.0
+fonttools==4.58.4
+fpdf==1.7.2
+fsspec==2025.9.0
+gast==0.6.0
+gdown==5.2.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-pasta==0.2.0
+greenlet==3.2.4
+grpcio==1.73.0
+gunicorn==23.0.0
+h11==0.16.0
+h5py==3.14.0
+html5lib==1.1
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kaggle==1.7.4.5
+keras==3.10.0
+kiwisolver==1.4.8
+libclang==18.1.1
+lxml==6.0.1
+Markdown==3.8.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+namex==0.1.0
+narwhals==2.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.1.3
+openai==1.103.0
+opt_einsum==3.4.0
+optree==0.16.0
+oscrypto==1.3.0
+packaging==25.0
+pandas==2.3.0
+pillow==11.2.1
+protobuf==5.29.5
+pyarrow==21.0.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+pydicom==3.0.1
+pydyf==0.11.0
+Pygments==2.19.1
+pyHanko==0.30.0
+pyhanko-certvalidator==0.28.0
+pyparsing==3.2.3
+pypdf==6.0.0
+pyphen==0.17.2
+PySocks==1.7.1
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.1.1
+python-slugify==8.0.4
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+reportlab==4.4.3
+requests==2.32.4
+rich==14.0.0
+rpds-py==0.27.1
+scikit-learn==1.7.0
+scipy==1.15.3
+seaborn==0.13.2
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.8
+SQLAlchemy==2.0.43
+sqlparse==0.5.3
+starlette==0.47.3
+streamlit==1.50.0
+svglib==1.5.1
+sympy==1.14.0
+tenacity==9.1.2
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+termcolor==3.1.0
+text-unidecode==1.3
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+toml==0.10.2
+torch==2.8.0
+torchvision==0.23.0
+tornado==6.5.2
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.5.0
+uvicorn==0.35.0
+watchdog==6.0.0
+weasyprint==66.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wheel==0.45.1
+whitenoise==6.9.0
+wrapt==1.17.2
+xhtml2pdf==0.2.17
+xyzservices==2025.4.0
+zopfli==0.2.3.post1
