--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ sympy==1.14.0
 tenacity==9.1.2
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow>=2.20.0
+# tensorboard>=2.20.0   ← optional: comment it out entirely
 termcolor==3.1.0
 text-unidecode==1.3
 threadpoolctl==3.6.0
