--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.ipynb linguist-language=Python
 models/*.pth filter=lfs diff=lfs merge=lfs -text
 dataset/**/*.png filter=lfs diff=lfs merge=lfs -text
+VitFinal30_model.pth filter=lfs diff=lfs merge=lfs -text
